fix sidebar right-align for blog

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -81,6 +81,7 @@ html {
   margin-top: 0;
   font-family: "Abril Fatface", serif;
   font-size: 2.5rem;
+  text-align: right;
 }
 
 /* Sidebar nav */
@@ -111,6 +112,7 @@ a.sidebar-nav-item:focus {
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
+    text-align: right;
   }
 }
 
